--- a/src/sass/newsItem.scss
+++ b/src/sass/newsItem.scss
@@ -3,11 +3,13 @@
 .news-container {
     display: flex;
     width: 60%;
-    height: 190px;
-    padding-bottom: 10px;
+    height: 200px;
+    padding-bottom: 20px;
     margin: 20px auto 0 auto;
     cursor: pointer;
     border-bottom: 2px solid $border-gray;
+    font-family: "Scheherazade New", serif;
+    font-weight: 400;
 
     .content {
         width: 66.6%;
@@ -21,9 +23,9 @@
 
         .description {
             margin-bottom: auto;
-            font-size: 16px;
-            line-height: 16px;
-            height: 112px;
+            font-size: 18px;
+            line-height: 20px;
+            height: 120px;
             margin-bottom: 13px;
             overflow: hidden;
         }
@@ -48,6 +50,8 @@
 
     .news-img {
         width: 33.4%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+            0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
         .news-picture {
             width: 100%;
