--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,2 +1,6 @@
 $author-color: #add8e6;
 $border-gray: #d3d3d3;
+$color-white: #ffffff;
+$button-color: #0081d5;
+$search-color: #656f70;
+$search-hover-color: #15e64c;
