--- a/src/sass/newsItem.scss
+++ b/src/sass/newsItem.scss
@@ -5,11 +5,13 @@
     width: 60%;
     height: 200px;
     padding-bottom: 20px;
-    margin: 20px auto 0 auto;
+    margin: 40px auto 0 auto;
     cursor: pointer;
     border-bottom: 2px solid $border-gray;
     font-family: "Scheherazade New", serif;
     font-weight: 400;
+    text-decoration: none !important;
+    color: black;
 
     .content {
         width: 66.6%;
@@ -19,6 +21,9 @@
             font-size: 26px;
             line-height: 26px;
             margin-bottom: 15px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
         }
 
         .description {
